add search API and notificaiton API
